boltffi_backend/tests/snapshots/swift__swift_target_emits_wire_runtime_once.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_swift_runtime(SourceFixture::one(\"exports/string_functions\"))"
---
===== DemoFFI.swift =====
@usableFromInline struct WireReader {
    @usableFromInline let data: Data
    @usableFromInline var position: Int

    @inlinable init(data: Data, position: Int = 0) {
        self.data = data
        self.position = position
    }

    @inlinable init(ptr: UnsafePointer<UInt8>, len: Int) {
        self.data = Data(bytes: ptr, count: len)
        self.position = 0
    }

    @inlinable mutating func readU8() -> UInt8 {
        let value = data[position]
        position += 1
        return value
    }

    @inlinable mutating func readI8() -> Int8 {
        Int8(bitPattern: readU8())
    }

    @inlinable mutating func readU16() -> UInt16 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt16.self)
        }
        position += 2
        return UInt16(littleEndian: value)
    }

    @inlinable mutating func readI16() -> Int16 {
        Int16(bitPattern: readU16())
    }

    @inlinable mutating func readU32() -> UInt32 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt32.self)
        }
        position += 4
        return UInt32(littleEndian: value)
    }

    @inlinable mutating func readI32() -> Int32 {
        Int32(bitPattern: readU32())
    }

    @inlinable mutating func readU64() -> UInt64 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt64.self)
        }
        position += 8
        return UInt64(littleEndian: value)
    }

    @inlinable mutating func readI64() -> Int64 {
        Int64(bitPattern: readU64())
    }

    @inlinable mutating func readF32() -> Float {
        Float(bitPattern: readU32())
    }

    @inlinable mutating func readF64() -> Double {
        Double(bitPattern: readU64())
    }

    @inlinable mutating func readBool() -> Bool {
        readU8() != 0
    }

    @inlinable mutating func readString() -> String {
        let length = Int(readU32())
        guard length > 0 else { return "" }
        let start = position
        position += length
        return data.withUnsafeBytes { bytes in
            let pointer = bytes.baseAddress!.advanced(by: start).assumingMemoryBound(to: UInt8.self)
            let buffer = UnsafeBufferPointer(start: pointer, count: length)
            return String(decoding: buffer, as: UTF8.self)
        }
    }

    @inlinable mutating func readBytes() -> Data {
        let length = Int(readU32())
        guard length > 0 else { return Data() }
        let start = position
        position += length
        return data[start..<(start + length)]
    }

    @inlinable mutating func readDuration() -> TimeInterval {
        let seconds = readU64()
        let nanoseconds = readU32()
        return Double(seconds) + (Double(nanoseconds) / 1.0e9)
    }

    @inlinable mutating func readTimestamp() -> Date {
        let seconds = readI64()
        let nanoseconds = readU32()
        let delta = seconds >= 0
            ? (Double(seconds) + (Double(nanoseconds) / 1.0e9))
            : (Double(seconds) - (Double(nanoseconds) / 1.0e9))
        return Date(timeIntervalSince1970: delta)
    }

    @inlinable mutating func readUuid() -> UUID {
        let hi = readU64()
        let lo = readU64()
        var uuid: uuid_t = (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
        var hiBe = hi.bigEndian
        var loBe = lo.bigEndian
        withUnsafeMutableBytes(of: &uuid) { uuidBytes in
            Swift.withUnsafeBytes(of: &hiBe) { uuidBytes[0..<8].copyBytes(from: $0) }
            Swift.withUnsafeBytes(of: &loBe) { uuidBytes[8..<16].copyBytes(from: $0) }
        }
        return UUID(uuid: uuid)
    }

    @inlinable mutating func readUrl() -> URL {
        guard let url = URL(string: readString()) else { fatalError("Invalid URL") }
        return url
    }

    @inlinable mutating func readOptional<T>(_ body: (inout WireReader) -> T) -> T? {
        switch readU8() {
        case 0:
            return nil
        case 1:
            return body(&self)
        default:
            fatalError("Invalid optional wire tag")
        }
    }

    @inlinable mutating func readSequence<T>(_ body: (inout WireReader) -> T) -> [T] {
        let count = Int(readU32())
        guard count > 0 else { return [] }
        var result = [T]()
        result.reserveCapacity(count)
        for _ in 0..<count {
            result.append(body(&self))
        }
        return result
    }

    @inlinable mutating func readArray<T>(_ body: (inout WireReader) -> T) -> [T] {
        readSequence(body)
    }

    @inlinable mutating func readResult<Success, Failure: Swift.Error>(
        _ success: (inout WireReader) -> Success,
        _ failure: (inout WireReader) -> Failure
    ) -> Swift.Result<Success, Failure> {
        switch readU8() {
        case 0:
            return .success(success(&self))
        case 1:
            return .failure(failure(&self))
        default:
            fatalError("Invalid result wire tag")
        }
    }

    @inlinable mutating func readMap<K: Hashable, V>(
        _ key: (inout WireReader) -> K,
        _ value: (inout WireReader) -> V
    ) -> [K: V] {
        let count = Int(readU32())
        var result = [K: V]()
        result.reserveCapacity(count)
        for _ in 0..<count {
            let decodedKey = key(&self)
            let decodedValue = value(&self)
            if result.updateValue(decodedValue, forKey: decodedKey) != nil {
                fatalError("Duplicate map key")
            }
        }
        return result
    }
}

@usableFromInline struct WireWriter {
    @usableFromInline var data: Data

    @inlinable init(capacity: Int = 64) {
        self.data = Data(capacity: capacity)
    }

    @inlinable mutating func writeU8(_ value: UInt8) {
        data.append(value)
    }

    @inlinable mutating func writeI8(_ value: Int8) {
        writeU8(UInt8(bitPattern: value))
    }

    @inlinable mutating func writeU16(_ value: UInt16) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI16(_ value: Int16) {
        writeU16(UInt16(bitPattern: value))
    }

    @inlinable mutating func writeU32(_ value: UInt32) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI32(_ value: Int32) {
        writeU32(UInt32(bitPattern: value))
    }

    @inlinable mutating func writeU64(_ value: UInt64) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI64(_ value: Int64) {
        writeU64(UInt64(bitPattern: value))
    }

    @inlinable mutating func writeF32(_ value: Float) {
        writeU32(value.bitPattern)
    }

    @inlinable mutating func writeF64(_ value: Double) {
        writeU64(value.bitPattern)
    }

    @inlinable mutating func writeBool(_ value: Bool) {
        writeU8(value ? 1 : 0)
    }

    @inlinable mutating func writeString(_ value: String) {
        var value = value
        value.withUTF8 { utf8 in
            writeU32(UInt32(utf8.count))
            data.append(contentsOf: utf8)
        }
    }

    @inlinable mutating func writeBytes(_ value: Data) {
        writeU32(UInt32(value.count))
        data.append(contentsOf: value)
    }

    @inlinable mutating func writeDuration(_ value: TimeInterval) {
        if value.rounded(.down) > Double(Int64.max) { fatalError("Duration overflow") }
        if value < 0 { fatalError("Invalid duration") }
        let seconds = UInt64(value)
        let nanoseconds = UInt32((value - Double(seconds)) * 1.0e9)
        writeU64(seconds)
        writeU32(nanoseconds)
    }

    @inlinable mutating func writeTimestamp(_ value: Date) {
        var delta = value.timeIntervalSince1970
        var sign: Int64 = 1
        if delta < 0 {
            sign = -1
            delta = -delta
        }
        if delta.rounded(.down) > Double(Int64.max) { fatalError("Timestamp overflow") }
        let seconds = Int64(delta)
        let nanoseconds = UInt32((delta - Double(seconds)) * 1.0e9)
        writeI64(sign * seconds)
        writeU32(nanoseconds)
    }

    @inlinable mutating func writeUuid(_ value: UUID) {
        var uuid = value.uuid
        let (hi, lo) = Swift.withUnsafeBytes(of: &uuid) { raw -> (UInt64, UInt64) in
            let hiBe = raw.loadUnaligned(fromByteOffset: 0, as: UInt64.self)
            let loBe = raw.loadUnaligned(fromByteOffset: 8, as: UInt64.self)
            return (UInt64(bigEndian: hiBe), UInt64(bigEndian: loBe))
        }
        writeU64(hi)
        writeU64(lo)
    }

    @inlinable mutating func writeUrl(_ value: URL) {
        writeString(value.absoluteString)
    }

    @inlinable mutating func writeOptional<T>(_ value: T?, _ body: (inout WireWriter, T) -> Void) {
        switch value {
        case .some(let value):
            writeU8(1)
            body(&self, value)
        case .none:
            writeU8(0)
        }
    }

    @inlinable mutating func writeSequence<T>(_ value: [T], _ body: (inout WireWriter, T) -> Void) {
        writeU32(UInt32(value.count))
        for item in value {
            body(&self, item)
        }
    }

    @inlinable mutating func writeArray<T>(_ value: [T], _ body: (inout WireWriter, T) -> Void) {
        writeSequence(value, body)
    }

    @inlinable mutating func writeResult<Success, Failure: Swift.Error>(
        _ value: Swift.Result<Success, Failure>,
        _ success: (inout WireWriter, Success) -> Void,
        _ failure: (inout WireWriter, Failure) -> Void
    ) {
        switch value {
        case .success(let value):
            writeU8(0)
            success(&self, value)
        case .failure(let value):
            writeU8(1)
            failure(&self, value)
        }
    }

    @inlinable mutating func writeMap<K: Hashable, V>(
        _ value: [K: V],
        _ key: (inout WireWriter, K) -> Void,
        _ writeValue: (inout WireWriter, V) -> Void
    ) {
        writeU32(UInt32(value.count))
        for entry in value {
            key(&self, entry.key)
            writeValue(&self, entry.value)
        }
    }

    @inlinable func finalize() -> Data {
        data
    }
}

@inlinable func boltffiDecodeOwnedBuf<T>(
    _ pointer: UnsafePointer<UInt8>?,
    _ length: Int,
    _ decode: (inout WireReader) -> T
) -> T {
    var reader = WireReader(ptr: pointer!, len: length)
    return decode(&reader)
}

@inlinable func boltffiEncode(_ body: (inout WireWriter) -> Void) -> [UInt8] {
    var writer = WireWriter()
    body(&writer)
    return [UInt8](writer.finalize())
}
