boltffi_backend/tests/snapshots/swift__swift_target_renders_async_callback_handle_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"callback/async_callback_returning_callback_handle\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Child: AnyObject {
    func onValue(value: UInt32) -> UInt32
}

private final class ChildWrapper {
    let impl: Child

    init(_ impl: Child) {
        self.impl = impl
    }
}

private var boltffiChildVtable: ___ChildVTable = {
    ___ChildVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_value: { handle, value in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ChildWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.onValue(value: value)
        }
    )
}()

private enum ChildBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_child(&boltffiChildVtable)
    }()

    static func create(_ impl: Child) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ChildWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_child(handle)
    }
}

public protocol Sibling: AnyObject {
    func onName(name: String)
}

private final class SiblingWrapper {
    let impl: Sibling

    init(_ impl: Sibling) {
        self.impl = impl
    }
}

private var boltffiSiblingVtable: ___SiblingVTable = {
    ___SiblingVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<SiblingWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<SiblingWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_name: { handle, name_ptr, name_len in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<SiblingWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            var boltffiNameReader: WireReader = WireReader(ptr: name_ptr!, len: Int(name_len))
            wrapper.impl.onName(name: boltffiNameReader.readString())
        }
    )
}()

private enum SiblingBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_sibling(&boltffiSiblingVtable)
    }()

    static func create(_ impl: Sibling) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = SiblingWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_sibling(handle)
    }
}

public protocol Listener: AnyObject {
    func child() async -> Child
    func sibling() async -> Sibling
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}

private var boltffiListenerVtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        child: { handle, complete, complete_context in
            guard handle != 0 else { complete?(complete_context, FfiStatus(code: 1), BoltFFICallbackHandle(handle: 0, vtable: nil)); return }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            _Concurrency.Task {
                let boltffiResult = await wrapper.impl.child()
                complete?(complete_context, FfiStatus(code: 0), ChildBridge.create(boltffiResult))
            }
        },
        sibling: { handle, complete, complete_context in
            guard handle != 0 else { complete?(complete_context, FfiStatus(code: 1), BoltFFICallbackHandle(handle: 0, vtable: nil)); return }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            _Concurrency.Task {
                let boltffiResult = await wrapper.impl.sibling()
                complete?(complete_context, FfiStatus(code: 0), SiblingBridge.create(boltffiResult))
            }
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&boltffiListenerVtable)
    }()

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
}
