boltffi_backend/tests/snapshots/swift__swift_target_renders_async_class_methods.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/async_class_methods\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class Engine {
    @usableFromInline let handle: UInt64

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    deinit {
        boltffi_release_class_demo_engine(handle)
    }

    public init() {
        self.handle = boltffi_init_class_demo_engine_new()
    }

    public func compute(value: UInt32) async throws -> UInt32 {
        let boltffiFuture = boltffi_method_class_demo_engine_compute(self.handle, value)
        return try await boltffiAsyncCall(
            futureHandle: boltffiFuture,
            poll: boltffi_async_method_class_demo_engine_compute_poll,
            cancel: boltffi_async_method_class_demo_engine_compute_cancel,
            free: boltffi_async_method_class_demo_engine_compute_free
        ) { boltffiFuture, boltffiStatus in
            let boltffiResult = boltffi_async_method_class_demo_engine_compute_complete(boltffiFuture, boltffiStatus)
            guard boltffiStatus.code == 0 else {
                throw FfiError(message: "FFI failed in async completion with code \(boltffiStatus.code)")
            }
            return boltffiResult
        }
    }
}
