boltffi_backend/tests/snapshots/swift__swift_target_renders_async_complete_return_shapes.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"records/person\",\n\"exports/async_complete_return_shapes\",]))"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Person: Hashable, Equatable, Sendable {
    public var name: String

    public init(name: String) {
        self.name = name
    }

    @inlinable static func decode(from reader: inout WireReader) -> Person {
        Person(name: reader.readString())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public func refresh() async throws {
    let boltffiFuture = boltffi_function_demo_refresh()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_refresh_poll,
        cancel: boltffi_async_function_demo_refresh_cancel,
        free: boltffi_async_function_demo_refresh_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_refresh_complete(boltffiFuture, boltffiStatus)
        guard boltffiStatus.code == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatus.code)")
        }
    }
}

public func loadName() async throws -> String {
    let boltffiFuture = boltffi_function_demo_load_name()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_load_name_poll,
        cancel: boltffi_async_function_demo_load_name_cancel,
        free: boltffi_async_function_demo_load_name_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_load_name_complete(boltffiFuture, boltffiStatus)
        guard boltffiStatus.code == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatus.code)")
        }
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func loadPoint() async throws -> Point {
    let boltffiFuture = boltffi_function_demo_load_point()
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_load_point_poll,
        cancel: boltffi_async_function_demo_load_point_cancel,
        free: boltffi_async_function_demo_load_point_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_load_point_complete(boltffiFuture, boltffiStatus)
        guard boltffiStatus.code == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatus.code)")
        }
        return Point(fromC: boltffiResult)
    }
}
