boltffi_backend/tests/snapshots/swift__swift_target_renders_callback_direct_result_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_status_result\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol StatusMapper: AnyObject {
    func mapStatus(status: Int32) throws -> Int32
}

private final class StatusMapperWrapper {
    let impl: StatusMapper

    init(_ impl: StatusMapper) {
        self.impl = impl
    }
}

private var __boltffi_status_mapper_vtable: ___StatusMapperVTable = {
    ___StatusMapperVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        map_status: { handle, return_out, status in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<StatusMapperWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            do {
                let __boltffi_result = try wrapper.impl.mapStatus(status: status)
                return_out?.pointee = __boltffi_result
                return FfiBuf_u8()
            } catch {
                let __boltffi_error_bytes = boltffiEncode { __boltffi_error_writer in __boltffi_error_writer.writeString((error as? FfiError)?.message ?? String(describing: error)) }
                return __boltffi_error_bytes.withUnsafeBufferPointer { __boltffi_error_buffer in
                    boltffi_buf_from_bytes(__boltffi_error_buffer.baseAddress, UInt(__boltffi_error_buffer.count))
                }
            }
        }
    )
}()

private enum StatusMapperBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_status_mapper(&__boltffi_status_mapper_vtable)
    }()

    static func create(_ impl: StatusMapper) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = StatusMapperWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_status_mapper(handle)
    }
}
